# casm-utilities

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CONTRIBUTING.md  ChangeLog  Makefile.am  README.md  _configure.ac  bootstrap.sh  clang-format-all.sh  configure.ac  format-all.sh  meet.txt
docs/breathe/source/: conf.py
docs/dox/: config
docs/sphinx/source/: casmutils.mapping.rst  casmutils.rst  casmutils.stage.rst  casmutils.sym.rst  casmutils.xtal.frankenstein.rst  casmutils.xtal.rst  conf.py  index.rst  modules.rst  xtal.frankenstein.rst  xtal.rst
include/: Makemodule.am  structure.hpp
include/casmutils/: Makemodule.am  coordinate.hpp  definitions.hpp  exceptions.hpp  frankenstein.hpp  handlers.hpp  lattice.hpp  misc.hpp  rocksalttoggler.hpp  site.hpp  stage.hpp  structure.hpp  structure_tools.hpp
include/casmutils/clusterography/: Makemodule.am  cluster_finder.hpp
include/casmutils/mapping/: Makemodule.am  structure_mapping.hpp
include/casmutils/mush/: Makemodule.am  shift.hpp  slab.hpp  twist.hpp
include/casmutils/sym/: Makemodule.am  cartesian.hpp
include/casmutils/xtal/: Makemodule.am  coordinate.hpp  frankenstein.hpp  lattice.hpp  rocksalttoggler.hpp  site.hpp  structure.hpp  structure_tools.hpp  symmetry.hpp
include/completer/: handlers.hh
lib/: Makemodule.am  definitions.hpp
lib-py/: Makemodule.am
lib-py/casmutils/: Makemodule.am  __init__.py
lib-py/casmutils/mapping/: Makemodule.am  __init__.py  mapping.py  structure.py
lib-py/casmutils/stage/: Makemodule.am  __init__.py  stage-py.cxx
lib-py/casmutils/sym/: Makemodule.am  __init__.py  cart.py
lib-py/casmutils/xtal/: Makemodule.am  __init__.py  coordinate.py  globaldef.py  globalvar.py  lattice.py  single_block_wadsley_roth.py  site.py  structure.py  symmetry.py  xtal-py.cxx  xtal.py
lib/alone/: simplicity.cxx  simplicity.hpp
lib/bedazzle/: bedazzle.cxx  bedazzle.hpp
lib/boostblob/: Makemodule.am
lib/boxify/: boxify.cxx  boxify.hpp
lib/casmblob/: Makefullcasm.am  Makemodule.am  VaspIO.cc  VaspIO.hh
lib/casmutils/: Makemodule.am  coordinate.cxx  frankenstein.cxx  handlers.cxx  lattice.cxx  misc.cxx  rocksalttoggler.cxx  site.cxx  stage.cxx  structure.cxx  structure_tools.cxx
lib/casmutils/clusterography/: Makemodule.am  cluster_finder.cxx
lib/casmutils/mapping/: Makemodule.am  structure_mapping.cxx
lib/casmutils/mush/: Makemodule.am  shift.cxx  slab.cxx  twist.cxx
lib/casmutils/sym/: Makemodule.am  cartesian.cxx
lib/casmutils/xtal/: Makemodule.am  coordinate.cxx  frankenstein.cxx  lattice.cxx  rocksalttoggler.cxx  site.cxx  structure.cxx  structure_tools.cxx  symmetry.cxx
lib/completer/: handlers.cxx  handlers.hpp
lib/launch/: launchers.cxx  launchers.hpp  rules.cxx  rules.hpp
lib/primitivize/: primitivize.cxx  primitivize.hpp
lib/splash/: Makemodule.am  splash.cxx  splash.hpp
lib/structure/: Makemodule.am  structure.cxx  structure.hpp
lib/tester/: tester.cxx  tester.hpp
plugins/: .gitignore
py/tutorial/: Jamroot.jam  Makemodule.am  hello.cpp
src/: Makemodule.am  casmutils  structure.cxx
src/apply_strain/: Makemodule.am  apply_strain.cpp
src/casmblob/: Makemodule.am
src/casmutils/: Makemodule.am  frankenstein.cxx  handlers.cxx  lattice.cxx  misc.cxx  rocksalttoggler.cxx  stage.cxx  structure.cxx  structure_tools.cxx
src/coord_shift/: Makemodule.am  coord_shift.cpp
src/frankenslice/: Makemodule.am  frankenslice.cpp
src/frankenstack/: Makemodule.am  frankenstack.cpp
src/inflate/: Makemodule.am  inflate.cpp
src/primify/: Makemodule.am  primify.cpp
src/simple_program/: Makemodule.am  simple_program.cpp
src/simple_program/test/: POSCAR_1  POSCAR_2
src/splash/: Makemodule.am
src/stage/: Makemodule.am  stage.cpp
src/struc_score/: Makemodule.am  struc_score.cpp
src/structure/: structure.cpp
src/super_boxy/: Makemodule.am  super_boxy.cpp
src/super_structure/: Makemodule.am  super_structure.cpp
src/utilities/: Makemodule.am  casm_utilities.cpp
src/utilities_complete/: Makemodule.am  casm_utilities_complete.cpp
src/vacuum_pack/: Makemodule.am  vacuum_pack.cpp
submodules/: CASMcode
tests/: Makemodule.am  autotools.hh
tests/input_files/: Mg_hcp.vasp  conventional_fcc_Ni.vasp  deformed_conventional_fcc_Ni.vasp  displaced_fcc_Ni.vasp  distorted_Mg_hcp.vasp  hypothetical_cell.vasp  nonniggli_conventional_fcc_Ni.vasp  partial_bain_Ni.vasp  perfectly_bained_Ni.vasp  primitive_bcc_Ni.vasp  primitive_fcc_Ni.vasp  simple_cubic_Ni.vasp  squished_hcp.vasp  strained_conventional_fcc_Ni.vasp
tests/input_files/Mg-mush/: tmp.cpp
tests/integration/: .gitignore  Makemodule.am  cu-import.py.in  phony_module_installation.sh.in
tests/py/: Makemodule.am  _xtal-import.py.in  coordinate.py.in  cu-import.py.in  lattice.py.in  site.py.in  stage-import.py.in  stage.py.in  structure.py.in  structure_tools.py.in  xtal-import.py.in
tests/py/casmutils/: Makemodule.am
tests/unit/: Makemodule.am
tests/unit/casmutils/: Makemodule.am  coordinate.cpp  lattice.cpp  meta.cpp  site.cpp  stage.cpp  structure.cpp  (+1 more)
utilipy/: Makemodule.am
utilipy/casmutils/: __init__.py
utilities/: Makemodule.am  casmutils  casmutils.complete
utilities/apply_strain/: Makemodule.am  apply_strain.cpp
utilities/applystrain/: Makemodule.am  applystrain.cpp
utilities/coord_shift/: Makemodule.am  coord_shift.cpp
utilities/frankenslice/: Makemodule.am  frankenslice.cpp
utilities/frankenstack/: Makemodule.am  frankenstack.cpp
utilities/inflate/: Makemodule.am  inflate.cpp
utilities/originshift/: Makemodule.am  originshift.cpp
utilities/primify/: Makemodule.am  primify.cpp
utilities/simple_program/: Makemodule.am  simple_program.cpp
utilities/stage/: #stage.cpp#  Makemodule.am  stage.cpp
utilities/struc_score/: Makemodule.am  struc_score.cpp
utilities/super_boxy/: Makemodule.am  super_boxy.cpp
utilities/super_structure/: Makemodule.am  super_structure.cpp
utilities/superstructure/: Makemodule.am  superstructure.cpp
utilities/vacuum_pack/: Makemodule.am  vacuum_pack.cpp
utilities/vacuumpack/: Makemodule.am  vacuumpack.cpp
(+932 files in other folders)
